	           behaviour, see ecasound man page
	- fixed: qtecasound - position slider wasn't working
	- fixed: instead of just outputting raw ANSI-codes, 
		 standard ncurses routines are now used
	- fixed: recording from realtime inputs didn't work 
		 when processing length was not set
	- fixed: setting processing length didn't work in normal 
		 passive mixing mode (multiple chains)
30012000 (v1.6.13d11)
	- changed: rtnull reports about over/underruns now
		   level-4 debug messages
	- fixed: some problems in mixmode selection
29012000 (v1.6.12r10)  -** public release **-
	- added: support for s24_le, s24_be, s32_le and s32_be 
		 sample formats
	- added: support for ALSA-subdevices (-o:alsa,card,dev,subdev)
	- added: to ia-mode - 'c-deselect', 'c-select-add'
	- added: improved multitrack-sync
        - added: 'default-double-buffer-size' added to .ecasoundrc
	- changed: ALSA pcm2-devices now opened in nonblock-mode
	- changed: ecasound can now be compiled in a separate obj dir
	- fixed: bugs in channel routing and output mixing
	- fixed: delay effects dumped core with mono inputs
14012000 (v1.6.11d10)
	- added: -ef4 - 2th-order, 24dB filter which simulates
	         an analog active RC-lowpass filter - submitted by 
		 Stefan Fendt
	- added: support for ALSA 0.5.x (pcm2, no loopback)
	- removed: support for ALSA 0.3.1 and older
	- changed: 'cs-edit' now possible while processing
	- changed: raised-priority mode moved from chainsetups 
		   to session-level (isn't saved to ecs-files, etc)
	- fixed: removed the huge delay in (dis)connecting chainsetups
	- fixed: 'fw', 'rw', 'setpos' crashed if executed without
		 parameters 
	- fixed: under/overrun problems with ALSA drivers
	- fixed: stdin/stdout not working
	- fixed: c-add and c-select didn't accept multiple parameters
	- fixed: problems with -etf memory handling
03012000 (v1.6.10d10)
	- added: a realtime null audio device 'rtnull' - simulates
		 soundcard behaviour (warns about over/underruns)