@@ -78,8 +78,7 @@ const char* ecasound_parameter_help_rep =
 "         time_in_seconds\n"
 "     -kl2:fx_param, low, high, two-stage linear envelope\n"
 "         1st_stage_length,\n"
-"         2nd_stage_length,\n"
-"         midpoint_value_%%\n"
+"         2nd_stage_length\n"
 "     -km:fx_param, low, high,  MIDI-controlled envelope\n"
 "         controller, channel \n"
 " --- \n"
