@@ -24,12 +24,9 @@
 
 DYNAMIC_PARAMETERS::parameter_type TWO_STAGE_LINEAR_ENVELOPE::value(void) {
   curpos += step_length();
-  if (curpos <= length_in_seconds()) {
-    if (curpos < first_stage_length_rep)
-      curval = (curpos / first_stage_length_rep) * midpoint_value_rep;
-    else
-      curval = ((curpos - first_stage_length_rep) /
-		second_stage_length_rep) + midpoint_value_rep;
+  if (curpos > first_stage_length_rep) {
+    curval = ((curpos - first_stage_length_rep) /
+	      second_stage_length_rep);
   }
   return(curval);
 }
@@ -37,7 +34,6 @@ DYNAMIC_PARAMETERS::parameter_type TWO_STAGE_LINEAR_ENVELOPE::value(void) {
 TWO_STAGE_LINEAR_ENVELOPE::TWO_STAGE_LINEAR_ENVELOPE(void) {
   set_parameter(1, get_parameter(1));
   set_parameter(2, get_parameter(2));
-  set_parameter(3, get_parameter(3));
 } 
 
 void TWO_STAGE_LINEAR_ENVELOPE::init(DYNAMIC_PARAMETERS::parameter_type step) {
@@ -48,7 +44,6 @@ void TWO_STAGE_LINEAR_ENVELOPE::init(DYNAMIC_PARAMETERS::parameter_type step) {
   otemp.setprecision(3);
   otemp << "1." << get_parameter(1);
   otemp << "- 2." << get_parameter(2);
-  otemp << "- 3." << get_parameter(3);
   ecadebug->msg(ECA_DEBUG::user_objects, otemp.to_string());
 }
 
@@ -70,11 +65,6 @@ void TWO_STAGE_LINEAR_ENVELOPE::set_parameter(int param, DYNAMIC_PARAMETERS::par
       curval = 0.0;
       break;
     }
-  case 3:
-    {
-      midpoint_value_rep = value / 100.0;
-      break;
-    }
   }
 }
 
@@ -85,9 +75,6 @@ DYNAMIC_PARAMETERS::parameter_type TWO_STAGE_LINEAR_ENVELOPE::get_parameter(int 
 
   case 2:
     return(second_stage_length_rep);
-
-  case 3:
-    return(midpoint_value_rep * 100.0);
   }
   return(0.0);
 }
